--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,5 @@
 spring.application.name=user-service
+server.port=8080
+# CORS settings handled by var environments
+cors.allowed-origins=http://localhost:5173
+cors.allowed-methods=GET,POST,PUT,DELETE,OPTIONS
