chore: new properties some ones must be empty

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,5 +1,15 @@
 spring.application.name=user-service
 server.port=8080
+
+# ===== GLOBALS =====
 # CORS settings handled by var environments
 cors.allowed-origins=http://localhost:5173
 cors.allowed-methods=GET,POST,PUT,DELETE,OPTIONS
+# SECURITY
+spring.security.user.name=
+spring.security.user.password=
+user_service.api-key=
+
+# user module
+user_module.password-min-length=8
+user_module.min-age=18
