chore: var environments improvement for runing with docker and not from .env settings

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,15 +1,15 @@
 spring.application.name=user-service
-server.port=8080
+server.port=${USER_SERVICE_PORT:8080}
 
 # ===== GLOBALS =====
 # CORS settings handled by var environments
-cors.allowed-origins=http://localhost:5173
-cors.allowed-methods=GET,POST,PUT,DELETE,OPTIONS
+cors.allowed-origins=${CORS_ALLOWED_ORIGINS}
+cors.allowed-methods=${CORS_ALLOWED_METHODS}
 # SECURITY
 spring.security.user.name=
 spring.security.user.password=
-user_service.api-key=
+user_service.api-key=${USER_SERVICE_API_KEY}
 
 # user module
-user_module.password-min-length=8
-user_module.min-age=18
+user_module.password-min-length=${USER_MODULE_PASSWORD_MIN_LENGTH}
+user_module.min-age=${USER_MODULE_MIN_AGE}
