--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -6,13 +6,16 @@ services:
     hostname: axon-user-service
     image: axon-user-service
     restart: on-failure
-    build: .
+    build:
+      context: .
+      dockerfile: Dockerfile
     ports:
-      - "8080:8080"
+      - "${USER_SERVICE_PORT}:${USER_SERVICE_PORT}"
       - "8443:8443"
-    expose:
-      - "8080"
-      - "8443"
+    environment:
+      - USER_SERVICE_PORT=${USER_SERVICE_PORT}
+    env_file:
+      - .env
     networks:
       - backend
 
