--- a/pom.xml
+++ b/pom.xml
@@ -123,6 +123,12 @@
             <version>1.5.16</version>
         </dependency>
 
+        <dependency>
+            <groupId>io.github.cdimascio</groupId>
+            <artifactId>java-dotenv</artifactId>
+            <version>5.2.2</version>
+        </dependency>
+
     </dependencies>
 
     <build>
